--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,12 +99,13 @@ nav ul li {
   gap: 5rem;
   max-width: 68.75rem;
   margin: auto;
+  padding: 2rem;
 }
 
 .hero-img {
-  height: 32.5rem;
+  height: 27.5rem;
   width: 25.5rem;
-  
+  mix-blend-mode: multiply;
 }
 
 .bio {
